Wed Jan 10 21:14:31 1996  Theodore Y. Ts'o  <tytso@dcl>

	* fcc.h (KRB5_FCC_DEFAULT_VNO): Remove KRB5_FCC_DEFAULT_VNO; now
		set in init_ctx.c.

	* fcc_maybe.c (krb5_fcc_open_file): 
	* fcc_gennew.c (krb5_fcc_generate_new): Use
		context->fcc_default_format to determine the credentials
		cache type.

	* fcc_read.c (krb5_fcc_read_keyblock): If reading in a version 3
		credentials cache, ignore the second enctype stored in the
		ccache; just read it into a dummy variable.

Thu Dec 21 18:28:09 1995  Theodore Y. Ts'o  <tytso@dcl>

	* fcc_maybe.c (krb5_fcc_open_file): In the case of
		FCC_OPEN_AND_ERASE, unlink the old filename, and then add
		the O_EXCL open flag, to prevent O_CREAT from following a
		symbolic link.
		(krb5_fcc_open_file): Use KRB5_CC_FORMAT as an error code
		instead of KRB5_CCACHE_BADVNO, when it's really a format
		error in the credentials cache file.

Fri Oct  6 22:03:16 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Remove ##DOS!include of config/windows.in.
		config/windows.in is now included by wconfig.

Mon Sep 25 16:56:41 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Wed Sep 13 10:56:00 1995 Keith Vetter (keithv@fusion.com)

	* fcc_maybe.c: signed/unsigned mismatch.

Mon Sep 11 21:05:40 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* fcc_maybe.c (krb5_fcc_open_file): use THREEPARAMOPEN instead of
	just open.

Wed Sep 06 14:20:57 1995   Chris Provenzano (proven@mit.edu)

         * file_read.c, file_write.c : s/keytype/enctype/g, s/KEYTYPE/ENCTYPE/g

Wed Sept 6 12:00:00 EDT 1995	James Mattly	(mattly@fusion.com)

	* fcc_retrv.c: for _MACINTOSH, defined register to null for compiler
	 prototype problems.

	* fcc_maybe.c: included <stdio.h>

Tue Sep 05 22:58:52 1995

	* fcc.h : Add another KRB5_FCC_FVNO but don't up the default.
	* fcc_gennew.c, fcc_maybe.c : New version saves a length after 
		version for whatever we want to put into the ccache before 