@@ -135,9 +135,9 @@ register const krb5_data *data1, *data2;
 }
 
 static krb5_boolean
-ktype_match(context, creds)
-register krb5_context context;
-register krb5_creds *creds;
+ktype_reasonable(context, creds)
+    register krb5_context context;
+    register krb5_creds *creds;
 {
     register int i;
     krb5_enctype * ktypes = (krb5_enctype *) NULL;
@@ -223,8 +223,9 @@ krb5_scc_retrieve(context, id, whichfields, mcreds, creds)
 	      (! set(KRB5_TC_MATCH_2ND_TKT) ||
 	       data_match (&mcreds->second_ticket, &fetchcreds.second_ticket))
 	      &&
-	      (! set(KRB5_TC_MATCH_KTYPE) ||
-	       ktype_match (context, &fetchcreds))
+	      ((! set(KRB5_TC_MATCH_KTYPE)&&
+		ktype_reasonable (context, &fetchcreds))||
+		  (mcreds->keyblock.enctype == fetchcreds.keyblock.enctype))
 	      )
 	  {
 	       krb5_scc_end_seq_get(context, id, &cursor);
